# no_project_sockets

./: .gitignore  README.md  pyproject.toml
for_quik/: QuikLuaPython.lua
no_project_sockets/socket_client_sandbox/: client.py  gui.py  main.py
no_project_sockets/socket_server/: market_depth.py  server.py
tests/: test_market_depth.py
