[tool.poetry]
name = "no-project-sockets"
version = "0.1.0"
description = ""
authors = ["Sergey Mironov <ka6ah505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
